--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,24 +1,26 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Dating App</a>
-  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button> -->
+  <!--<a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>-->
+  <a class="navbar-brand" href="*" >Dating App</a>
 
-  <!-- <div class="collapse navbar-collapse" id="navbarsExampleDefault"> -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Matches 
+      <li class="nav-item">
+        <!--<a class="nav-link" [routerLink]="['/members']" >Matches -->
           <!-- <span class="sr-only">(current)</span></a> -->
+          <a class="nav-link" >Matches
+              <span class="sr-only">(current)</span>
         </a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+        <!--<a class="nav-link" [routerLink]="['/lists']" >Lists</a>-->
+        <a class="nav-link" href="*" >Lists</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
+       <!-- <a class="nav-link" [routerLink]="['/messages']" >Messages</a>-->
+       <a class="nav-link" href="*" >Messages</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Logout</a>
+       <!-- <a class="nav-link" (click)="logout()">Logout</a>-->
+       <a class="nav-link" href="*">Logout</a>
       </li>
       <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
