--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,46 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <!--<a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>-->
-  <a class="navbar-brand" href="*" >Dating App</a>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+  <div class="container">
+  <a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>
 
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <!--<a class="nav-link" [routerLink]="['/members']" >Matches -->
-          <!-- <span class="sr-only">(current)</span></a> -->
-          <a class="nav-link" >Matches
-              <span class="sr-only">(current)</span>
-        </a>
-        </li>
-      <li class="nav-item">
-        <!--<a class="nav-link" [routerLink]="['/lists']" >Lists</a>-->
-        <a class="nav-link" href="*" >Lists</a>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/members']" >Matches</a>
       </li>
-      <li class="nav-item">
-       <!-- <a class="nav-link" [routerLink]="['/messages']" >Messages</a>-->
-       <a class="nav-link" href="*" >Messages</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
       </li>
-      <li class="nav-item">
-       <!-- <a class="nav-link" (click)="logout()">Logout</a>-->
-       <a class="nav-link" href="*">Logout</a>
+      <li class="nav-item" routerLinkActive="active">
+       <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
       </li>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome User
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken.unique_name | titlecase}}
       </a>
     
-      <div class="dropdown-menu">
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
 
@@ -51,5 +33,5 @@
       placeholder="Password" required [(ngModel)]="model.password">
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
-  <!-- </div> -->
+  </div>
 </nav>
